# visual-base

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  justfile  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/bub_eye/: __init__.py  channel.py  ffmpeg.py  plugin.py  settings.py  supervisor.py
src/bub_eye/understand/: __init__.py  merge.py  state.py  worker.py
src/bub_kimi/: utils.py
src/skills/video-activity-log/: SKILL.md
src/skills/video-activity-log/scripts/: finalize_log.py
src/visual_base/: __init__.py  cli.py  defaults.py  settings.py
tests/: conftest.py  test_bub_eye_channel_wiring.py  test_bub_eye_ffmpeg_args.py  test_bub_eye_ffmpeg_install.py  test_bub_eye_settings_layout.py  test_bub_eye_understand_merge.py  test_bub_eye_understand_state.py  test_bub_eye_understand_worker.py  test_bub_kimi_install.py  test_bub_kimi_plugin.py  test_visual_base_cli_default.py  test_visual_base_settings.py
